--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,12 @@
+---
+title: "cachemeR"
+author: "Kamil Foltyński"
+date:  "`r Sys.Date()`"
+output:
+  md_document:
+    variant: markdown_github
+---
+
 # cachemeR
 
 [![Build Status](https://travis-ci.org/Tazovsky/cachemeR.svg?branch=devel)](https://travis-ci.org/Tazovsky/cachemeR)
