--- a/README.Rmd
+++ b/README.Rmd
@@ -191,5 +191,5 @@ Package is developed in RStudio run in container:
 
 ```bash
 docker build -t cachemer .
-docker run --rm -v $(PWD):/mnt/vol -d -p 8787:8787 -it cachemer:latest
+docker run --rm -v $(PWD):/mnt/vol -d -p 8787:8787 -it cachemer
 ```
