--- a/src/vignettes/save_restore_cache.Rmd
+++ b/src/vignettes/save_restore_cache.Rmd
@@ -34,7 +34,7 @@ cache$setLogger(TRUE)
 start.t <- Sys.time()
 res1 %c-% testFun(1:23, b = 1, list(d = 2, e = 3))
 res2 %c-% testFun(1:50, b = 2, list(d = 4, e = 5))
-fib %c-% calculateFibonacci(50000)
+lm_fit %c-% doLm(500, 500)
 t1 <- Sys.time() - start.t
 t1
 
@@ -65,7 +65,7 @@ cache <- cachemer$new(path = config.file)
 start.t <- Sys.time()
 res1 %c-% testFun(1:23, b = 1, list(d = 2, e = 3))
 res2 %c-% testFun(1:50, b = 2, list(d = 4, e = 5))
-fib %c-% calculateFibonacci(50000)
+lm_fit %c-% doLm(500, 500)
 t2 <- Sys.time() - start.t
 t2
 
